  * new order aesthetic which controls the order in which elements are plotted
  * min and max are now scaled the same way as y
  * functions are silently dropped (e.g. aes(colour=col))
  * scales do not try and map variables than don't exist (fixes some rather obscure bugs)
  * aes(mpg, wt) is now equivalent to aes(x = mpg, y = wt)

  * stat_qq: axes flipped to agree with base R
  * stat_qq: now uses sample aesthetic to select variable for summary
  * geom_vline, geom_hline: yet another rewrite which should make them more powerful and less error prone.  
  * geom_boxplot: now has it's own legend which actually looks like a boxplot
  * scale_size: changed default range to [0.5, 3] to better reflect new sizing decisions
  * geom_boxplot: reports if missing values removed
  * geom_boxplot: deals with continuous x-axis and grouping much better
  * coord_polar: add start and direction parameters, giving more control over the layout of the polar coords
  * coord_polar: added my favourite pie chart example
  * coord_trans now deals with groups appropriately, at the cost of decreased speed
  * geom_abline, geom_vline, geom_hline: should now behave better in a wider variety of settings
  * geom_crossbar: the middle line is now display thicker than the other lines, controlled by the parameter fatten (thanks to Heike Hofmann for the suggestion)
  * geom_density: fix scale adjustment bug in geom_density
  * geom_line, geom_text: all size measurements (now lines and text as well) are measured in mm, lines/paths default to paths 0.5mm wide
  * geom_rug: new to add marginal rug plots
  * geom_smooth: fixed bug where if se=FALSE x axis always includes 0
  * qplot: allow qplot to use computed aesthetics too
  * scale_discrete: all discrete scales now have labels argument which you can use to override the factor levels
  * scale_size: legends resize to avoid overlaps
  * scale_discrete: now works correctly with character vectors